5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1637_1054.log
== SUBMITION (2019-04-07 11:53:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

if (2x + y==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.158544
-- ERROR:
  File "/home/codebench/codes/1637/1054/main.py", line 7
    if (2x + y==3):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:53:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

if (2x + y==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 7
    if (2x + y==3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:53:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2x+y
if (soma==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 7
    soma= 2x+y
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:55:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= (2x+y)
if (soma==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 7
    soma= (2x+y)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:55:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma = 2x+y==3
print(soma)
-- ERROR:
File "XXXX", line 7
    soma = 2x+y==3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:56:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma = (2x+y==3)
print(soma)
-- ERROR:
File "XXXX", line 7
    soma = (2x+y==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:56:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y==3
print(soma)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:56:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.199031
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:56:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:57:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= (2*x)+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else: 
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:57:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= (2*x)+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else (soma>3)
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 10
    else (soma>3)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:58:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= (2*x)+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else (soma>3):
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 10
    else (soma>3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:58:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= (2*x)+y==3
if (soma==3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:58:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= ((2*x)+y)==3
if (soma==3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:58:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y
if (soma==3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:58:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y
if (soma==3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.123481
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual a coordenada x? "))
y= float(input("qual a coordenada y? "))

soma= 2*x+y
if (soma==3):
	msg= "ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.103707
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
